<resources>
    <string name="app_name">Scodd</string>

    //Login
    <string name="title_activity_login">LoginActivity</string>
    <string name="logo_content_desc">SCODD</string>
    <string name="rooster_content_desc">picture of a rooster with a mop in hand and bucket on it\'s head covered in water</string>
    <string name="create_acc_button">Create Account</string>
    <string name="log_in_button">Log-In</string>

    //Dashboard
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="sun_content_desc">bright sun</string>
    <string name="title_activity_scodd">ScoddActivity</string>
    <string name="roundup_header">Today’s Roundup</string>


    //Chore
    <string name="search_bar_placeholder">Find Chore</string>
    <string name="workflow_title">Workflow</string>
    <string name="workflow_desc">Collection of chores routinely done together.</string>
    <string name="chore_title">Chore</string>
    <string name="workflow_label">Workflows</string>
    <string name="chore_label">Chores</string>
    <string name="no_chores_message">You don\'t have any chores!</string>
    <string name="chore_unmarked_favorite">Favorite Removed!</string>
    <string name="chore_marked_favorite">Favorite Added!</string>
    <string name="fab_create">Create Chores &amp; Workflows</string>


    //Select Chore
    <string name="fab_create_chore">Create Chore</string>
    <string name="fab_quick_create">Quick Add</string>
    <string name="select_chore_title">Select Chores</string>
    <string name="check_button_contDesc">Done</string>
    <string name="selected_label">Selected</string>
    <string name="select_all_label">Select All</string>
    <string name="dialog_quick_title">Quick-Add Chore</string>

    //Workflow
    <string name="workflow_view_button_contDesc">View Chores</string>
    <string name="workflow_complete_button_contDesc">Complete Chores</string>
    <string name="lock">Lock</string>
    <string name="chore_marked_complete">Chore Complete!</string>
    <string name="completed_chores_cleared">Completed Chores Cleared</string>

    //Create Chore
    <string name="room_title">Room</string>
    <string name="create_workflow_label">Create workflow</string>
    <string name="routine_label">Routine</string>
    <string name="date_label">Date</string>
    <string name="start_date_label">Start Date</string>
    <string name="date_button_contDesc">Choose Date</string>
    <string name="time_button_contDesc">Choose Time</string>
    <string name="date_label_conj">at</string>
    <string name="one_time_label">One-Time</string>
    <string name="schedule_label">Schedule</string>
    <string name="freq_label">Every</string>
    <string name="time_duration_label">Timer Duration</string>
    <string name="bank_amount">Amount</string>
    <string name="dialog_option_cancel">Cancel</string>
    <string name="dialog_option_ok">Okay</string>
    <string name="dialog_select_time_label">Select time</string>
    <string name="chore_no_title_message">Please give this chore a title</string>
    <string name="save_button">Save</string>
    <string name="title_hint">Title</string>
    <string name="value_missing_error">Must have a value</string>
    <string name="greater_value_error">Greater than 0</string>
    <string name="loading_date_error">There was a problem with loading the date.</string>
    <string name="workflow_not_found">Workflow could not be found</string>

    //Create Workflow
    <string name="instructions_text">Add chores routinely done together into a workflow</string>
    <string name="workflow_no_title_message">Please give this workflow a title</string>
    <string name="no_title_message">Must have a title.</string>


    //Mode
    <string name="mode_label">Modes</string>
    <string name="modes_title">Modes</string>
    <string name="chore_source">From Workflows</string>
    <string name="chore_repeat">This chore is already in the list</string>

    //Time Crunch
    <string name="time_mode_title">Time Crunch</string>
    <string name="chore_timer_mode_not_active">Timer mode is not active</string>
    <string name="time_mode_desc">The ultimate solution for those seeking a fun and motivating way to complete household tasks efficiently. This mode transforms the mundane into the thrilling by using a specific time limit to each chore in your workflow. It\'s like turning your cleaning routine into a high-stakes game where you race against the clock to conquer clutter and chaos</string>

    //Chore Spin
    <string name="spin_mode_title">Chore Spin</string>
    <string name="spin_mode_desc">Injects an element of surprise into your daily routine. Instead of manually selecting your next chore, you can leave it up to chance with a fun spin of the wheel. Just like spinning a roulette wheel, Chore Spin randomly selects a task from your list of chores, adding an element of excitement and unpredictability to your daily chores.</string>


    //Piggy Bank
    <string name="bank_mode_title">Piggy Bank</string>
    <string name="chore_bank_mode_not_active">Bank mode is not active.</string>
    <string name="bank_mode_desc">Adds an exciting twist to your daily routine. It associates a virtual cash value with each chore on your to-do list. As you successfully complete your chores, you\'ll see your \"Piggy Bank\" grow. It\'s like granting yourself a personal budget for guilt-free indulgence in treats and small luxuries as a well-deserved reward, all while maintaining a sense of accomplishment.</string>

    //Quest Mode
    <string name="quest_mode_title">Chore Quest</string>
    <string name="quest_mode_desc">Your trusted method for maintaining a clean and organized home without overwhelm. Inspired by the 5 Things method, it\'s time to bid farewell to the stress of chores and say hello to a more organized, goal-oriented approach to your cleaning routine. With clear guidance and achievable steps, you\'ll work through each room, making chore management a breeze.</string>


    //Sand Mode
    <string name="sand_option_one">Countdown Only</string>
    <string name="sand_option_two">Countdown and Chores</string>
    <string name="button_switch">Switch</string>
    <string name="mode_option_label">Mode Option:</string>
    <string name="sand_mode_title">Sand Glass</string>
    <string name="sand_mode_desc">Transforms your cleaning routine into a thrilling and productive adventure, enabling you to make progress on your chores without feeling overwhelmed. Set a time frame and embark on a task-driven journey. During this period, you can approach your chores at your own pace or use a checklist to conquer tasks, experiencing a triumphant feeling of accomplishment and completion along the way.</string>
    <string name="sand_time_placeholder">00</string>
    <string name="sand_picker_hr_label">h</string>
    <string name="sand_picker_min_label">m</string>
    <string name="sand_picker_sec_label">s</string>
    <string name="sand_time_label_conj"> and </string>
    <string name="sand_time_hr">hour</string>
    <string name="sand_time_hr_plural">hours</string>
    <string name="sand_time_min">minute</string>
    <string name="sand_time_min_plural">minutes</string>
    <string name="sand_time_sec">second</string>
    <string name="sand_time_sec_plural">seconds</string>
    <string name="sand_time_label">Cleaning Time:</string>

    //Errors
    <string name="loading_rooms_error">There was a problem with loading the rooms</string>
    <string name="loading_items_error">There was a problem with loading the items.</string>
    <string name="loading_workflow_error">There was a problem with loading with workflow</string>
    <string name="loading_chores_error">There was a problem with loading the chores.</string>
    <string name="warning">Warning</string>


    //Context Options
    <string name="add_roundup">Add To Today\'s Roundup</string>
    <string name="chore_selected">Chore Selected</string>
    <string name="options">More Options</string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete Item</string>
    <string name="confirm_delete_message">Are you sure you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="add_chore_items">Add Chores</string>
    <string name="edit_chore_items">Edit Chores</string>
    <string name="remove">Remove</string>
    <string name="chore_not_found_workflow">This chore cannot be found in the workflow.</string>
    <string name="bank_potential_payout">Potential Payout:</string>
    <string name="time_esitmation">Estimated Time:</string>
    <string name="quest_directions">This mode focuses on rooms rather than chores.</string>
    <string name="quest_focus">Focus Areas</string>
    <string name="snackbar_edit">Edit</string>
    <string name="snackbar_remove">Remove</string>
    <string name="close">Close</string>
    <string name="skip">Skip</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="done">Done</string>
    <string name="complete">Complete</string>
    <string name="finish">Finish</string>
    <string name="amount_escrow">Amount In Escrow</string>
    <string name="pause">Pause</string>
    <string name="timer_cont">Continue</string>
    <string name="resume">Resume</string>
    <string name="time_up">Time\'s Up!</string>
    <string name="more_time">+5 minutes</string>
    <string name="spin_wheel">Spin the Wheel</string>
    <string name="restart">Restart</string>
    <string name="user_completing_spin">You\'ve worked through all the chores!</string>
    <string name="chores_completed">Chores Completed!</string>
    <string name="next">Next</string>
    <string name="current_room">Current Room:</string>
    <string name="trash_content_desc">picture of a trash bag</string>

    <string name="quest_one_title">Quest 1: Trash</string>
    <string name="quest_one_desc">Go around the room and pick up all the trash.</string>

    <string name="quest_two_title">Quest 2: Laundry</string>
    <string name="quest_two_desc">Look around the room and gather clothing.</string>

    <string name="quest_three_title">Quest 3: Dishes</string>
    <string name="quest_three_desc">Track down those dirty dishes and bring them back to the kitchen.</string>

    <string name="quest_four_title">Quest 4: Lost &amp; Found</string>
    <string name="quest_four_desc">Return the things that have a place back to where they belong.</string>

    <string name="quest_five_title">Quest 5: Orphaned Items</string>
    <string name="quest_five_desc">The things that don\'t have a place, find a place or throw them away.</string>
    <string name="back">Back</string>
    <string name="briefing_desc">This room needs your attention! Follow the quests to conquer the clutter.</string>
    <string name="quest_message">It’s okay if you’re feeling overwhelmed. Just take it room-by-room. You can do this!</string>
    <string name="quest_finished">Mission Accomplished! You tackled those rooms like a brave champion!</string>
    <string name="quest_finished_message">Bear in mind that a weary adventurer deserves rest too.</string>
    <string name="bank_payout">Payout:</string>
    <string name="time_total">Total Time:</string>
    <string name="well_done">Well Done.</string>
    <string name="overview">Overview</string>
    <string name="progress_lost">If you exit, all progress will be lost.</string>
    <string name="keep_going">Keep Going</string>
    <string name="exit">Exit</string>
    <string name="incomplete_chores">Incomplete Chores</string>
    <string name="chores_not_completed">There are still chores you haven\'t completed.</string>
    <string name="create_workflow_message">Create a workflow and add some chores \n to use it in a mode</string>
    <string name="dashboard_no_chores">Nothing to do today. Take some time to rest.</string>
    <string name="completed">Completed</string>
    <string name="clear">Clear</string>
    <string name="hide">Hide</string>
    <string name="hide_completed">Hide Completed</string>
    <string name="show_completed">Show Completed</string>
    <string name="horizon">On The Horizon</string>
    <string name="clear_all">Clear All</string>
    <string name="workflow_no_chores">Please add at least one chore.</string>
    <string name="workflow_empty">It\'s looking pretty empty in here.</string>
    <string name="added_roundup">Chore added to Today\'s Roundup</string>
    <string name="added_roundup_workflow">Workflow added to Today\'s Roundup</string>
    <string name="chore_resolve_error">Please resolve errors before saving.</string>
    <string name="reset">Reset</string>
    <string name="get_started">Get Started</string>
    <string name="piggy_bank">Piggy Bank</string>

</resources>