...
}
fun NavGraphBuilder.choreGraph(navController: NavController){

    navigation(route = ChoreNav.route, startDestination = ChoreNav.Chores.route){

        composable(route = ChoreNav.Chores.route) {
            ChoreScreen(
                onCreateWorkflowClick = {
                    navController.navigate(ChoreNav.CreateWorkflow.route)
                },
                onCreateChoreClick = {
                    navController.navigate(ChoreNav.CreateChore.route)
                },
...
